$Id$

2014-11-29  Christian Franke  <franke@computer.org>

	os_win32.cpp: Add strnicmp() compatibility macro for newer Cygwin
	releases.

2014-11-16  Tommy Vestermark  <tommy.vestermark@gmail.com>

	drivedb.h: USB: Prolific PL2773 (0x067b:0x2773) (ticket #482).

2014-11-16  Christian Franke  <franke@computer.org>

	Create branches RELEASE_6_[1-3]_DRIVEDB with last drivedb.h file
	compatible with smartmontools 6.[1-3].

2014-11-10  Tommy Vestermark  <tommy.vestermark@gmail.com>

	scsiata.cpp: Add class usbprolific_device to support Prolific PL2773
	USB bridges (ticket #482).
	smartctl.8.in, smartd.conf.5.in: Document '-d usbprolific'.

2014-11-09  Roger Willcocks  <roger@filmlight.ltd.uk>

	os_linux.cpp: linux_aacraid_device: Fix ioctl data count
	if dxfer_len == 0.  Return scsi sense data.  Together these
	allow the SMART STATUS command to operate correctly.
	Improve SRB status checks.
	linux_ata_device: Fix very old bug in the error handling
	of HDIO_DRIVE_TASKFILE.

2014-10-07  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: Added more attributes for SanDisk based SSDs based on SSD
	Dashboard tool data (#463)

2014-10-06  Christian Franke  <franke@computer.org>

	ataprint.cpp: Add form factors from ACS-4.
	Add ACS-2 and ACS-3 minor versions.
	Update SATA log names.  Add SATA 3.2.
	Avoid crash on device statistics page 0xff if SMART READ LOG is used.
	Print vendor specific bytes from SCT Status.
	atacmds.cpp, atacmds.h, ataprint.cpp: Print SMART STATUS info
	from SCT Status.

2014-10-06  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: Exteneded regexp for SanDisk X300s (#463)

2014-09-29  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: Added Seagate Backup Plus Slim Portable USB 3.0 drive

2014-08-29  Christian Franke  <franke@computer.org>

	drivedb.h: Fix regex syntax error (regression from r3988).

2014-08-22  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h:
	- fixed SanDisk X210 regular expression

2014-08-21  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: